--- a/D_Afternoon_Muhammad Ismail/index.html
+++ b/D_Afternoon_Muhammad Ismail/index.html
@@ -25,7 +25,7 @@
       <a
         class="nav_btn"
         target="_blank"
-        href="https://api.whatsapp.com/send?phone=6289687601023&text=%F0%9F%98%B1%F0%9F%98%B1%F0%9F%98%B1"
+        href="https://api.whatsapp.com/send?phone=212657039909&text=%F0%9F%98%B1%F0%9F%98%B1%F0%9F%98%B1"
       >
         <button><i class="fa fa-whatsapp"></i> Let's Talk</button>
       </a>
@@ -34,11 +34,11 @@
     <!-- About Section -->
     <section id="about">
       <div class="about">
-        <h3><span>Hello! I'am Ismail —</span></h3>
-        <h1>I'am a Beginner Web Developer</h1>
+        <h3><span>Hello! I'am Blacken</span></h3>
+        <h1>I'am a pro Web Developer</h1>
         <p>
-          I am currently studying at STT Terpadu Nurul Fikri majoring in <br />
-          Informatics Engineering. Sometimes have the motivation to learn <br />
+          I am currently studying at FSA in <br />
+          Software Engineering. Sometimes have the motivation to learn <br />
           and improve new skills. I hope to develop further in the <br />
           future to gain real world work experience <br />
           in web development.
@@ -53,21 +53,21 @@
           berkembang untuk kedepannya untuk mendapatkan <br />pengalaman kerja
           dunia nyata di web development.
         </p> -->
-        <a class="about_btn" href="mailto:muhaisim7@gmail.com">
+        <a class="about_btn" href="Blacken13@gmail.com">
           <button><i class="fa fa-briefcase"></i> Hire me</button>
         </a>
 
         <div class="about-icons">
-          <a href="https://www.linkedin.com/in/7muh-ismail/" target="_blank">
+          <a href="https://www.linkedin.com/in/Blacken/" target="_blank">
             <i class="fa fa-linkedin-square"></i>
           </a>
-          <a href="https://github.com/hasyim404" target="_blank">
+          <a href="https://github.com/Blacken" target="_blank">
             <i class="fa fa-github"></i>
           </a>
-          <a href="https://www.facebook.com/ismailhere.7/" target="_blank">
+          <a href="https://www.facebook.com/Blacken.7/" target="_blank">
             <i class="fa fa-facebook-square"></i>
           </a>
-          <a href="https://www.instagram.com/muhh.ismail__/" target="_blank">
+          <a href="https://www.instagram.com/Blacken/" target="_blank">
             <i class="fa fa-instagram"></i>
           </a>
         </div>
@@ -99,9 +99,9 @@
 
         <div class="row">
           <div class="col1">
-            <h2>STT Terpadu Nurul Fikri</h2>
-            <p class="date-edu">2020 - now</p>
-            <p class="desc-edu">Majoring in Informatics Engineering</p>
+            <h2>FSA</h2>
+            <p class="date-edu">2022 - now</p>
+            <p class="desc-edu">Data Analytics</p>
           </div>
 
           <div class="col2">
@@ -115,9 +115,9 @@
           </div>
 
           <div class="col3">
-            <h2>SMK Al-Hasra</h2>
-            <p class="date-edu">2017 - 2020</p>
-            <p class="desc-edu">Computer and Network Engineering</p>
+            <h2>FST</h2>
+            <p class="date-edu">2014</p>
+            <p class="desc-edu">Computer Science</p>
           </div>
         </div>
 
@@ -279,7 +279,7 @@
         </div>
 
         <div class="createby">
-          <p>&copy; Muhammad ismail, 2023.</p>
+          <p>&copy; Blacken, 2024.</p>
           <p>All rights reserved.</p>
         </div>
       </div>
