--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolioo</title>
+    <title>Blacken Portfolio</title>
     <link rel="icon" type="image/x-icon" href="/assets/fav-icon.jpg" />
     <link rel="stylesheet" href="style/style.css" />
     <link
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <h4 class="logo"><a href="">My Portfolio</a></h4>
+      <h4 class="logo"><a href="">Blacken</a></h4>
       <nav>
         <ul class="nav_links">
           <li><a href="#about">About</a></li>
