--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <div class="col1">
             <h2>FSA</h2>
             <p class="date-edu">2022 - now</p>
-            <p class="desc-edu">Data Analytics</p>
+            <p class="desc-edu">Physics</p>
           </div>
 
           <div class="col2">
@@ -116,7 +116,7 @@
 
           <div class="col3">
             <h2>FST</h2>
-            <p class="date-edu">2014</p>
+            <p class="date-edu">2024</p>
             <p class="desc-edu">Computer Science</p>
           </div>
         </div>
@@ -286,16 +286,7 @@
     </footer>
 
     <!-- Another -->
-    <div class="resolution">
-      <h1>
-        Not a Responsive website <br />
-        <span>"Coming Soon"</span>
-      </h1>
-      <p>
-        For a better display, try 720p resolution <br />
-        with resize your browser by zooming-in.
-      </p>
-    </div>
+  
 
     <div id="scrool-up">
       <a href="#about">
