--- a/index.html
+++ b/index.html
@@ -44,30 +44,22 @@
           in web development.
         </p>
 
-        <!-- <p>
-          Saya sedang berkuliah di STT Terpadu Nurul Fikri dengan mengambil
-          <br />
-          jurusan Teknik Informatika. Kadang kala mempunyai motivasi untuk<br />
-          belajar dan meningkatkan keterampilan baru. Saya berharap dapat
-          lebih<br />
-          berkembang untuk kedepannya untuk mendapatkan <br />pengalaman kerja
-          dunia nyata di web development.
-        </p> -->
+        
         <a class="about_btn" href="Blacken13@gmail.com">
           <button><i class="fa fa-briefcase"></i> Hire me</button>
         </a>
 
         <div class="about-icons">
-          <a href="https://www.linkedin.com/in/Blacken/" target="_blank">
+          <a href="https://www.linkedin.com/in/" target="_blank">
             <i class="fa fa-linkedin-square"></i>
           </a>
-          <a href="https://github.com/Blacken" target="_blank">
+          <a href="https://github.com/" target="_blank">
             <i class="fa fa-github"></i>
           </a>
-          <a href="https://www.facebook.com/Blacken.7/" target="_blank">
+          <a href="https://www.facebook.com/" target="_blank">
             <i class="fa fa-facebook-square"></i>
           </a>
-          <a href="https://www.instagram.com/Blacken/" target="_blank">
+          <a href="https://www.instagram.com/" target="_blank">
             <i class="fa fa-instagram"></i>
           </a>
         </div>
