--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
 
       <div class="img_about">
-        <img src="assets/imghero.png" alt="about img" />
+        <img src="assets/_b7abf07d-47fd-4fd8-ae3a-a97565e6c728.jpg" alt="about img" />
       </div>
 
       <div class="wave">
