--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@
       <div class="img_about">
         <img src="assets/_b7abf07d-47fd-4fd8-ae3a-a97565e6c728.jpg" alt="about img" />
       </div>
+      <style>
+    .large-image {
+        width: 100%;
+        max-width: 800px; /* or whatever size you prefer */
+        height: auto; /* This maintains the aspect ratio */
+    }
+      </style>
 
       <div class="wave">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
