--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
         <div class="row">
           <div class="col1">
             <h2>FSA</h2>
-            <p class="date-edu">2022 - now</p>
-            <p class="desc-edu">Physics</p>
+            <p class="date-edu">2024 - now</p>
+            <p class="desc-edu">Computer Science</p>
           </div>
 
           <div class="col2">
@@ -114,9 +114,9 @@
           </div>
 
           <div class="col3">
-            <h2>FST</h2>
-            <p class="date-edu">2024</p>
-            <p class="desc-edu">Computer Science</p>
+            <h2>FSA</h2>
+            <p class="date-edu">2022</p>
+            <p class="desc-edu">Physics</p>
           </div>
         </div>
 
