--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blacken Portfolio</title>
-    <link rel="icon" type="image/x-icon" href="/assets/fav-icon.jpg" />
+    <link rel="icon" type="image/x-icon" href="assets/_3e29fb20-3c76-4dc3-a9f0-9b00fb2d3ad5.jpg" />
     <link rel="stylesheet" href="style/style.css" />
     <link
       rel="stylesheet"
