--- a/index.html
+++ b/index.html
@@ -1,298 +1,204 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blacken Portfolio</title>
-    <link rel="icon" type="image/x-icon" href="assets/_3e29fb20-3c76-4dc3-a9f0-9b00fb2d3ad5.jpg" />
-    <link rel="stylesheet" href="style/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-  </head>
-  <body>
+    <link rel="icon" type="image/x-icon" href="assets/_3e29fb20-3c76-4dc3-a9f0-9b00fb2d3ad5.jpg">
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<body>
     <header>
-      <h4 class="logo"><a href="">Blacken</a></h4>
-      <nav>
-        <ul class="nav_links">
-          <li><a href="#about">About</a></li>
-          <li><a href="#education">Education</a></li>
-          <li><a href="#skill">Skills</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
-      <a
-        class="nav_btn"
-        target="_blank"
-        href="https://api.whatsapp.com/send?phone=212657039909&text=%F0%9F%98%B1%F0%9F%98%B1%F0%9F%98%B1"
-      >
-        <button><i class="fa fa-whatsapp"></i> Let's Talk</button>
-      </a>
+        <h4 class="logo"><a href="#">Blacken</a></h4>
+        <nav>
+            <ul class="nav_links">
+                <li><a href="#about">About</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#skill">Skills</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+        <a class="nav_btn" target="_blank" href="https://api.whatsapp.com/send?phone=212657039909&text=%F0%9F%98%B1%F0%9F%98%B1%F0%9F%98%B1">
+            <button><i class="fa fa-whatsapp"></i> Let's Talk</button>
+        </a>
     </header>
 
     <!-- About Section -->
     <section id="about">
-      <div class="about">
-        <h3><span>Hello! I'am Blacken</span></h3>
-        <h1>I'am a pro Web Developer</h1>
-        <p>
-          I am currently studying at FSA in <br />
-          Software Engineering. Sometimes have the motivation to learn <br />
-          and improve new skills. I hope to develop further in the <br />
-          future to gain real world work experience <br />
-          in web development.
-        </p>
-
-        
-        <a class="about_btn" href="Blacken13@gmail.com">
-          <button><i class="fa fa-briefcase"></i> Hire me</button>
-        </a>
-
-        <div class="about-icons">
-          <a href="https://www.linkedin.com/in/" target="_blank">
-            <i class="fa fa-linkedin-square"></i>
-          </a>
-          <a href="https://github.com/" target="_blank">
-            <i class="fa fa-github"></i>
-          </a>
-          <a href="https://www.facebook.com/" target="_blank">
-            <i class="fa fa-facebook-square"></i>
-          </a>
-          <a href="https://www.instagram.com/" target="_blank">
-            <i class="fa fa-instagram"></i>
-          </a>
+        <div class="about">
+            <h3><span>Hello! I'am Blacken</span></h3>
+            <h1>I'am a pro Web Developer</h1>
+            <p>
+                I am currently studying at FSA in <br>
+                Software Engineering. Sometimes have the motivation to learn <br>
+                and improve new skills. I hope to develop further in the <br>
+                future to gain real world work experience <br>
+                in web development.
+            </p>
+            <a class="about_btn" href="mailto:Blacken13@gmail.com">
+                <button><i class="fa fa-briefcase"></i> Hire me</button>
+            </a>
+            <div class="about-icons">
+                <a href="https://www.linkedin.com/in/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+                <a href="https://github.com/" target="_blank"><i class="fa fa-github"></i></a>
+                <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook-square"></i></a>
+                <a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"></i></a>
+            </div>
         </div>
-      </div>
-
-      <div class="img_about">
-        <img src="assets/_b7abf07d-47fd-4fd8-ae3a-a97565e6c728.jpg" alt="about img" />
-      </div>
-      <style>
-    .large-image {
-        width: 100%;
-        max-width: 800px; /* or whatever size you prefer */
-        height: auto; /* This maintains the aspect ratio */
-    }
-      </style>
-
-      <div class="wave">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-          <path
-            fill="#0284c7"
-            fill-opacity="1"
-            d="M0,96L60,96C120,96,240,96,360,101.3C480,107,600,117,720,154.7C840,192,960,256,1080,261.3C1200,267,1320,213,1380,186.7L1440,160L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"
-          ></path>
-        </svg>
-      </div>
+        <div class="img_about">
+            <img src="assets/_b7abf07d-47fd-4fd8-ae3a-a97565e6c728.jpg" alt="about img" class="large-image">
+        </div>
+        <div class="wave">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                <path fill="#0284c7" fill-opacity="1" d="M0,96L60,96C120,96,240,96,360,101.3C480,107,600,117,720,154.7C840,192,960,256,1080,261.3C1200,267,1320,213,1380,186.7L1440,160L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path>
+            </svg>
+        </div>
     </section>
 
     <!-- Education Section -->
     <section id="education">
-      <div class="education">
-        <div class="edu-title">
-          <h1>Education</h1>
-          <span>———o———</span>
-          <p>History of Education</p>
+        <div class="education">
+            <div class="edu-title">
+                <h1>Education</h1>
+                <span>———o———</span>
+                <p>History of Education</p>
+            </div>
+            <div class="row">
+                <div class="col1">
+                    <h2>FSA</h2>
+                    <p class="date-edu">2024 - now</p>
+                    <p class="desc-edu">Computer Science</p>
+                </div>
+                <div class="col2">
+                    <ul>
+                        <li></li>
+                        <br><br><br>
+                        <li></li>
+                    </ul>
+                </div>
+                <div class="col3">
+                    <h2>FSA</h2>
+                    <p class="date-edu">2022</p>
+                    <p class="desc-edu">Physics</p>
+                </div>
+            </div>
+            <div class="wave">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                    <path fill="#0284c7" fill-opacity="1" d="M0,224L60,202.7C120,181,240,139,360,144C480,149,600,203,720,213.3C840,224,960,192,1080,197.3C1200,203,1320,245,1380,266.7L1440,288L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path>
+                </svg>
+            </div>
         </div>
-
-        <div class="row">
-          <div class="col1">
-            <h2>FSA</h2>
-            <p class="date-edu">2024 - now</p>
-            <p class="desc-edu">Computer Science</p>
-          </div>
-
-          <div class="col2">
-            <ul>
-              <li></li>
-              <br />
-              <br />
-              <br />
-              <li></li>
-            </ul>
-          </div>
-
-          <div class="col3">
-            <h2>FSA</h2>
-            <p class="date-edu">2022</p>
-            <p class="desc-edu">Physics</p>
-          </div>
-        </div>
-
-        <div class="wave">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-            <path
-              fill="#0284c7"
-              fill-opacity="1"
-              d="M0,224L60,202.7C120,181,240,139,360,144C480,149,600,203,720,213.3C840,224,960,192,1080,197.3C1200,203,1320,245,1380,266.7L1440,288L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"
-            ></path>
-          </svg>
-        </div>
-      </div>
     </section>
 
     <!-- Skills Section -->
     <section id="skill">
-      <div class="skill">
-        <div class="skill-title">
-          <h1>Skills</h1>
-          <span>——o—o——</span>
-          <p>Programming languages<br />and tools.</p>
+        <div class="skill">
+            <div class="skill-title">
+                <h1>Skills</h1>
+                <span>——o—o——</span>
+                <p>Programming languages<br>and tools.</p>
+            </div>
+            <div class="flex-wrapper">
+                <div class="items flex-grid">
+                    <div class="d-col-1 t-col-4 m-col-12">
+                        <img src="assets/html.png" alt="HTML">
+                        <p>HTML</p>
+                        <p class="medium">medium</p>
+                    </div>
+                    <div class="d-col-1 t-col-4 m-col-12">
+                        <img src="assets/css.svg" alt="CSS">
+                        <p>CSS</p>
+                        <p class="medium">medium</p>
+                    </div>
+                    <div class="d-col-1 t-col-4 m-col-12">
+                        <img src="assets/js.png" alt="JavaScript">
+                        <p>JavaScript</p>
+                        <p class="basic">basic</p>
+                    </div>
+                    <div class="d-col-1 t-col-4 m-col-12">
+                        <img src="assets/php.svg" alt="PHP" width="80">
+                        <p>PHP</p>
+                        <p class="basic">basic</p>
+                    </div>
+                    <div class="d-col-1 t-col-4 m-col-12">
+                        <img src="assets/bootstrap.png" alt="Bootstrap" width="80">
+                        <p>Bootstrap</p>
+                        <p class="medium">medium</p>
+                    </div>
+                    <div class="d-col-1 t-col-4 m-col-12">
+                        <img src="assets/codeigniter.png" alt="CodeIgniter" width="60">
+                        <p style="margin-left: -5px">CodeIgniter</p>
+                        <p class="basic">basic</p>
+                    </div>
+                </div>
+                <div class="items flex-grid">
+                    <div class="d-col-1 t-col-4 m-col-12">
+                        <img src="assets/laravel.png" alt="Laravel">
+                        <p>Laravel</p>
+                        <p class="basic">basic</p>
+                    </div>
+                    <div class="d-col-1 t-col-4 m-col-12">
+                        <img src="assets/reactjs.png" alt="ReactJS">
+                        <p>ReactJS</p>
+                        <p class="basic">basic</p>
+                    </div>
+                    <div class="d-col-1 t-col-4 m-col-12">
+                        <img src="assets/phpmyadmin.png" alt="phpMyAdmin">
+                        <p style="margin-left: -14px">phpMyAdmin</p>
+                        <p class="basic">basic</p>
+                    </div>
+                    <div class="d-col-1 t-col-4 m-col-12">
+                        <img src="assets/github.png" alt="Github">
+                        <p>Github</p>
+                        <p class="basic">basic</p>
+                    </div>
+                    <div class="d-col-1 t-col-4 m-col-12">
+                        <img src="assets/postman.png" alt="Postman">
+                        <p>Postman</p>
+                        <p class="basic">basic</p>
+                    </div>
+                    <div class="d-col-1 t-col-4 m-col-12">
+                        <img src="assets/cpanel.png" alt="cPanel">
+                        <p>cPanel</p>
+                        <p class="basic">basic</p>
+                    </div>
+                </div>
+            </div>
         </div>
-
-        <div class="flex-wrapper">
-          <div class="items flex-grid">
-            <div class="d-col-1 t-col-4 m-col-12">
-              <img src="assets/html.png" alt="" />
-              <p>HTML</p>
-              <p class="medium">medium</p>
-            </div>
-            <div class="d-col-1 t-col-4 m-col-12">
-              <img src="assets/css.svg" alt="" />
-              <p>CSS</p>
-              <p class="medium">medium</p>
-            </div>
-            <div class="d-col-1 t-col-4 m-col-12">
-              <img src="assets/js.png" alt="" />
-              <p>JavaScript</p>
-              <p class="basic">basic</p>
-            </div>
-            <div class="d-col-1 t-col-4 m-col-12">
-              <img src="assets/php.svg" alt="" width="80" />
-              <p>PHP</p>
-              <p class="basic">basic</p>
-            </div>
-            <div class="d-col-1 t-col-4 m-col-12">
-              <img src="assets/bootstrap.png" alt="" width="80" />
-              <p>Bootstrap</p>
-              <p class="medium">medium</p>
-            </div>
-            <div class="d-col-1 t-col-4 m-col-12">
-              <img src="assets/codeigniter.png" alt="" width="60" />
-              <p style="margin-left: -5px">CodeIgniter</p>
-              <p class="basic">basic</p>
-            </div>
-          </div>
-
-          <div class="items flex-grid">
-            <div class="d-col-1 t-col-4 m-col-12">
-              <img src="assets/laravel.png" alt="" />
-              <p>Laravel</p>
-              <p class="basic">basic</p>
-            </div>
-            <div class="d-col-1 t-col-4 m-col-12">
-              <img src="assets/reactjs.png" alt="" />
-              <p>ReactJS</p>
-              <p class="basic">basic</p>
-            </div>
-            <div class="d-col-1 t-col-4 m-col-12">
-              <img src="assets/phpmyadmin.png" alt="" />
-              <p style="margin-left: -14px">phpMyAdmin</p>
-              <p class="basic">basic</p>
-            </div>
-            <div class="d-col-1 t-col-4 m-col-12">
-              <img src="assets/github.png" alt="" />
-              <p>Github</p>
-              <p class="basic">basic</p>
-            </div>
-            <div class="d-col-1 t-col-4 m-col-12">
-              <img src="assets/postman.png" alt="" />
-              <p>Postman</p>
-              <p class="basic">basic</p>
-            </div>
-            <div class="d-col-1 t-col-4 m-col-12">
-              <img src="assets/figma.png" alt="" />
-              <p>Figma</p>
-              <p class="basic">basic</p>
-            </div>
-          </div>
-        </div>
-      </div>
     </section>
 
     <!-- Contact Section -->
     <section id="contact">
-      <div class="contact">
-        <div class="contact-title">
-          <h1>Contact</h1>
-          <span>——o—o—o——</span>
-          <p>Contact me for more</p>
+        <div class="container">
+            <h1>Contact</h1>
+            <span>——o—o——</span>
+            <p class="contact-title">I would like to have the opportunity <br>to exchange ideas with you.</p>
+            <form id="contact-form" method="POST" action="mailto:Blacken13@gmail.com">
+                <div class="form-group">
+                    <label for="name">Full Name:</label>
+                    <input type="text" id="name" name="name" placeholder="Enter your name" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" placeholder="Enter your email" required>
+                </div>
+                <div class="form-group">
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message" placeholder="Enter your message" rows="5" required></textarea>
+                </div>
+                <div class="form-group">
+                    <button type="submit">Submit</button>
+                </div>
+            </form>
         </div>
-      </div>
-
-      <div class="row">
-        <div class="col left">
-          <img src="assets/img-form.svg" alt="" />
-        </div>
-
-        <div class="col right">
-          <!-- <h2>STT Terpadu Nurul Fikri</h2> -->
-          <form action="javascript:" method="post">
-            <label for="name">Fullname</label>
-            <input type="text" name="name" id="name" />
-            <label for="email">Email</label>
-            <input type="email" name="email" id="email" />
-            <label for="subject">Subject</label>
-            <input type="text" name="subject" id="subject" />
-            <label for="topic">Topic</label>
-            <select name="topic" id="topic">
-              <option value="information">Information</option>
-              <option value="feedback">Feedback</option>
-              <option value="other">Others</option>
-            </select>
-
-            <!-- <textarea name="subject" id="subject" cols="10" rows="5"></textarea> -->
-
-            <div class="btn-form">
-              <input type="submit" name="submit" id="submit" value="Submit" />
-            </div>
-          </form>
-        </div>
-      </div>
     </section>
-
-    <!-- Footer -->
-    <footer>
-      <div class="wave">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-          <path
-            fill="#0284c7"
-            fill-opacity="1"
-            d="M0,128L48,117.3C96,107,192,85,288,85.3C384,85,480,107,576,101.3C672,96,768,64,864,69.3C960,75,1056,117,1152,117.3C1248,117,1344,75,1392,53.3L1440,32L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
-          ></path>
-        </svg>
-      </div>
-
-      <div class="foot-content">
-        <p>Interest with me ?</p>
-        <p>Follow My Social Media</p>
-
-        <div class="social-icons">
-          <a href="https://www.facebook.com/ismailhere.7/" target="_blank">
-            <i class="fa fa-facebook-square"></i>
-          </a>
-          <a href="https://www.instagram.com/muhh.ismail__/" target="_blank">
-            <i class="fa fa-instagram"></i>
-          </a>
-        </div>
-
-        <div class="createby">
-          <p>&copy; Blacken, 2024.</p>
-          <p>All rights reserved.</p>
-        </div>
-      </div>
-    </footer>
-
-    <!-- Another -->
-    
-
-    <div id="scrool-up">
-      <a href="#about">
-        <i class="fa fa fa-arrow-up"></i>
-      </a>
-    </div>
-
-    <script src="script.js" type="text/javascript"></script>
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function () {
+            emailjs.init("OtYBZCk8M6yja7BdH");
+        })();
+    </script>
+    <script type="text/javascript" src="script.js"></script>
+</body>
 </html>
