--- a/index.html
+++ b/index.html
@@ -99,70 +99,66 @@
                 <span>——o—o——</span>
                 <p>Programming languages<br>and tools.</p>
             </div>
-            <div class="flex-wrapper">
-                <div class="items flex-grid">
-                    <div class="d-col-1 t-col-4 m-col-12">
-                        <img src="assets/html.png" alt="HTML">
-                        <p>HTML</p>
-                        <p class="medium">medium</p>
-                    </div>
-                    <div class="d-col-1 t-col-4 m-col-12">
-                        <img src="assets/css.svg" alt="CSS">
-                        <p>CSS</p>
-                        <p class="medium">medium</p>
-                    </div>
-                    <div class="d-col-1 t-col-4 m-col-12">
-                        <img src="assets/js.png" alt="JavaScript">
-                        <p>JavaScript</p>
-                        <p class="basic">basic</p>
-                    </div>
-                    <div class="d-col-1 t-col-4 m-col-12">
-                        <img src="assets/php.svg" alt="PHP" width="80">
-                        <p>PHP</p>
-                        <p class="basic">basic</p>
-                    </div>
-                    <div class="d-col-1 t-col-4 m-col-12">
-                        <img src="assets/bootstrap.png" alt="Bootstrap" width="80">
-                        <p>Bootstrap</p>
-                        <p class="medium">medium</p>
-                    </div>
-                    <div class="d-col-1 t-col-4 m-col-12">
-                        <img src="assets/codeigniter.png" alt="CodeIgniter" width="60">
-                        <p style="margin-left: -5px">CodeIgniter</p>
-                        <p class="basic">basic</p>
-                    </div>
+            <div class="skills-container">
+                <div class="skill-item">
+                    <img src="assets/html.png" alt="HTML">
+                    <p>HTML</p>
+                    <p class="level">Medium</p>
                 </div>
-                <div class="items flex-grid">
-                    <div class="d-col-1 t-col-4 m-col-12">
-                        <img src="assets/laravel.png" alt="Laravel">
-                        <p>Laravel</p>
-                        <p class="basic">basic</p>
-                    </div>
-                    <div class="d-col-1 t-col-4 m-col-12">
-                        <img src="assets/reactjs.png" alt="ReactJS">
-                        <p>ReactJS</p>
-                        <p class="basic">basic</p>
-                    </div>
-                    <div class="d-col-1 t-col-4 m-col-12">
-                        <img src="assets/phpmyadmin.png" alt="phpMyAdmin">
-                        <p style="margin-left: -14px">phpMyAdmin</p>
-                        <p class="basic">basic</p>
-                    </div>
-                    <div class="d-col-1 t-col-4 m-col-12">
-                        <img src="assets/github.png" alt="Github">
-                        <p>Github</p>
-                        <p class="basic">basic</p>
-                    </div>
-                    <div class="d-col-1 t-col-4 m-col-12">
-                        <img src="assets/postman.png" alt="Postman">
-                        <p>Postman</p>
-                        <p class="basic">basic</p>
-                    </div>
-                    <div class="d-col-1 t-col-4 m-col-12">
-                        <img src="assets/cpanel.png" alt="cPanel">
-                        <p>cPanel</p>
-                        <p class="basic">basic</p>
-                    </div>
+                <div class="skill-item">
+                    <img src="assets/css.svg" alt="CSS">
+                    <p>CSS</p>
+                    <p class="level">Medium</p>
+                </div>
+                <div class="skill-item">
+                    <img src="assets/js.png" alt="JavaScript">
+                    <p>JavaScript</p>
+                    <p class="level">Basic</p>
+                </div>
+                <div class="skill-item">
+                    <img src="assets/php.svg" alt="PHP">
+                    <p>PHP</p>
+                    <p class="level">Basic</p>
+                </div>
+                <div class="skill-item">
+                    <img src="assets/bootstrap.png" alt="Bootstrap">
+                    <p>Bootstrap</p>
+                    <p class="level">Medium</p>
+                </div>
+                <div class="skill-item">
+                    <img src="assets/codeigniter.png" alt="CodeIgniter">
+                    <p>CodeIgniter</p>
+                    <p class="level">Basic</p>
+                </div>
+                <div class="skill-item">
+                    <img src="assets/laravel.png" alt="Laravel">
+                    <p>Laravel</p>
+                    <p class="level">Basic</p>
+                </div>
+                <div class="skill-item">
+                    <img src="assets/reactjs.png" alt="ReactJS">
+                    <p>ReactJS</p>
+                    <p class="level">Basic</p>
+                </div>
+                <div class="skill-item">
+                    <img src="assets/phpmyadmin.png" alt="phpMyAdmin">
+                    <p>phpMyAdmin</p>
+                    <p class="level">Basic</p>
+                </div>
+                <div class="skill-item">
+                    <img src="assets/github.png" alt="Github">
+                    <p>Github</p>
+                    <p class="level">Basic</p>
+                </div>
+                <div class="skill-item">
+                    <img src="assets/postman.png" alt="Postman">
+                    <p>Postman</p>
+                    <p class="level">Basic</p>
+                </div>
+                <div class="skill-item">
+                    <img src="assets/cpanel.png" alt="cPanel">
+                    <p>cPanel</p>
+                    <p class="level">Basic</p>
                 </div>
             </div>
         </div>
